--- a/styles/maze.css
+++ b/styles/maze.css
@@ -1,12 +1,12 @@
 .maze {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-320px, -300px) ;
+    top: 60px;
+    left: 115px;
     
     border-width: 5px;
     border-style: solid;
     border-color: #3B3C37;
+ 
     
 }
 
